
add_library(epocservs
        include/services/context.h
        include/services/faker.h
        include/services/framework.h
        include/services/init.h
        include/services/akn/icon/icon.h
        include/services/akn/skin/chunk_maintainer.h
        include/services/akn/skin/icon_cfg.h
        include/services/akn/skin/ops.h
        include/services/akn/skin/server.h
        include/services/akn/skin/settings.h
        include/services/akn/skin/skn.h
        include/services/akn/skin/bitmap_store.h
        include/services/akn/skin/utils.h
        include/services/applist/op.h
        include/services/applist/applist.h
        include/services/audio/keysound/context.h
        include/services/audio/keysound/keysound.h
        include/services/audio/keysound/ops.h
        include/services/audio/keysound/ringtab.h
        include/services/audio/keysound/ringtab.h
        include/services/audio/mmf/audio.h
        include/services/audio/mmf/dev.h
        include/services/backup/backup.h
        include/services/cdl/cdl.h
        include/services/cdl/common.h
        include/services/cdl/ops.h
        include/services/cdl/watcher.h
        include/services/centralrepo/centralrepo.h
        include/services/centralrepo/common.h
        include/services/centralrepo/repo.h
        include/services/connmonitor/connmonitor.h
        include/services/domain/database.h
        include/services/domain/defs.h
        include/services/domain/domain.h
        include/services/drm/helper.h
        include/services/drm/rights.h
        include/services/ecom/ecom.h
        include/services/ecom/hleutils.h
        include/services/ecom/plugin.h
        include/services/etel/common.h
        include/services/etel/etel.h
        include/services/etel/line.h
        include/services/etel/modmngr.h
        include/services/etel/phone.h
        include/services/etel/subsess.h
        include/services/fbs/adapter/font_adapter.h
        include/services/fbs/adapter/stb_font_adapter.h
        include/services/fbs/bitmap.h
        include/services/fbs/compress_queue.h
        include/services/fbs/fbs.h
        include/services/fbs/font.h
        include/services/fbs/font_atlas.h
        include/services/fbs/font_store.h
        include/services/fbs/palette.h
        include/services/featmgr/featmgr.h
        include/services/fs/fs.h
        include/services/hwrm/def.h
        include/services/hwrm/hwrm.h
        include/services/hwrm/op.h
        include/services/hwrm/light/light_data.h
        include/services/hwrm/light/light_def.h
        include/services/hwrm/light/light.h
        include/services/hwrm/vibration/vibration_def.h
        include/services/hwrm/vibration/vibration_data.h
        include/services/hwrm/vibration/vibration.h
        include/services/loader/loader.h
        include/services/install/install.h
        include/services/loader/op.h
        include/services/msv/msv.h
        include/services/notifier/notifier.h
        include/services/posix/posix.h
        include/services/posix/op.h
        include/services/remcon/common.h
        include/services/remcon/controller.h
        include/services/remcon/remcon.h
        include/services/remcon/target.h
        include/services/sensor/sensor.h
        include/services/sms/sa/sa.h
        include/services/ui/cap/eiksrv.h
        include/services/ui/cap/oom_app.h
        include/services/ui/cap/sgc.h
        include/services/ui/eikappui.h
        include/services/ui/view/common.h
        include/services/ui/view/queue.h
        include/services/ui/view/view.h
        include/services/window/bitmap_cache.h
        include/services/window/scheduler.h
        include/services/window/screen.h
        include/services/window/window.h
        src/context.cpp
        src/faker.cpp
        src/framework.cpp
        src/init.cpp
        src/akn/icon/icon.cpp
        src/akn/icon/init.cpp
        src/akn/skin/chunk_maintainer.cpp
        src/akn/skin/icon_cfg.cpp
        src/akn/skin/ops.cpp
        src/akn/skin/server.cpp
        src/akn/skin/settings.cpp
        src/akn/skin/skn.cpp
        src/akn/skin/bitmap_store.cpp
        src/akn/skin/utils.cpp
        src/applist/applist.cpp
        src/applist/registeration.cpp
        src/audio/keysound/context.cpp
        src/audio/keysound/keysound.cpp
        src/audio/mmf/audio.cpp
        src/audio/mmf/dev.cpp
        src/backup/backup.cpp
        src/cdl/cdl.cpp
        src/cdl/common.cpp
        src/cdl/observer.cpp
        src/cdl/watcher.cpp
        src/centralrepo/centralrepo.cpp
        src/centralrepo/cre.cpp
        src/centralrepo/repo.cpp
        src/connmonitor/connmonitor.cpp
        src/domain/domain.cpp
        src/drm/helper.cpp
        src/drm/rights.cpp
        src/ecom/ecom.cpp
        src/ecom/hleutils.cpp
        src/ecom/instantiate.cpp
        src/ecom/plugin.cpp
        src/etel/etel.cpp
        src/etel/line.cpp
        src/etel/modmngr.cpp
        src/etel/phone.cpp
        src/etel/subsess.cpp
        src/fbs/adapter/font_adapter.cpp
        src/fbs/adapter/stb_font_adapter.cpp
        src/fbs/compress_queue.cpp
        src/fbs/fbs.cpp
        src/fbs/font_atlas.cpp
        src/fbs/impls/bitmap.cpp
        src/fbs/impls/font.cpp
        src/fbs/impls/font_store.cpp
        src/featmgr/featmgr.cpp
        src/fs/dirs.cpp
        src/fs/drives.cpp
        src/fs/files.cpp
        src/fs/fs.cpp
        src/hwrm/hwrm.cpp
        src/hwrm/light/light_data.cpp
        src/hwrm/light/light.cpp
        src/hwrm/vibration/vibration_data.cpp
        src/hwrm/vibration/vibration.cpp
        src/install/install.cpp
        src/loader/loader.cpp
        src/msv/entry.cpp
        src/msv/msv.cpp
        src/msv/registry.cpp
        src/notifier/notifier.cpp
        src/posix/posix.cpp
        src/remcon/common.cpp
        src/remcon/controller.cpp
        src/remcon/remcon.cpp
        src/remcon/target.cpp
        src/sensor/sensor.cpp
        src/sms/sa/sa.cpp
        src/ui/cap/eiksrv.cpp
        src/ui/cap/oom_app.cpp
        src/ui/cap/sgc.cpp
        src/ui/eikappui.cpp
        src/ui/view/queue.cpp
        src/ui/view/view.cpp
        src/window/classes/plugins/animdll.cpp
        src/window/classes/plugins/clickdll.cpp
        src/window/classes/plugins/sprite.cpp
        src/window/classes/bitmap.cpp
        src/window/classes/dsa.cpp
        src/window/classes/gctx.cpp
        src/window/classes/scrdvc.cpp
        src/window/classes/winbase.cpp
        src/window/classes/wingroup.cpp
        src/window/classes/winuser.cpp
        src/window/classes/wsobj.cpp
        src/window/bitmap_cache.cpp
        src/window/common.cpp
        src/window/fifo.cpp
        src/window/io.cpp
        src/window/scheduler.cpp
        src/window/screen.cpp
        src/window/window.cpp)

target_include_directories(epocservs PUBLIC include)

target_include_directories(epocservs PUBLIC
        ${EPOC32_INCLUDE_DIR})

target_link_libraries(epocservs PUBLIC
        common
        epocio
        epocloader
        epocmem
        epocutils)

target_link_libraries(epocservs PRIVATE
        config
        epoc
        epockern
        drivers
        manager
        stb
        xxHash)